# Melon

./: CMakeLists.txt  README.md  main.cpp
include/Agent/: NeuralNetwork.hpp  Random.hpp
include/Melon/: Crossover.hpp  GeneticAlgorithm.hpp  Mutation.hpp  NeuralNetwork.hpp  Random.hpp  Selection.hpp
src/: Crossover.cpp  GeneticAlgorithm.cpp  Mutation.cpp  NeuralNetwork.cpp  Random.cpp  Selection.cpp
